--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Obtenez votre site internet complet pour seulement 10€</title>
+    <title>Omisify</title>
   </head>
   <body>
     <div id="root"></div>
