--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Gagnez de l'argent avec Omisify</title>
+    <title>Omisify la marque préférée des influenceurs</title>
   </head>
   <body>
     <div id="root"></div>
